Mostrar datos de post

--- a/resources/sass/base/_theme.scss
+++ b/resources/sass/base/_theme.scss
@@ -8,6 +8,11 @@ body{
         height: 25%;
         background-color: #013909;
     }
+
+    .header_foro{
+        height: 20%;
+        background-color: #013909;
+    }
 }
 
 html, body{
