--- a/resources/sass/base/_typo.scss
+++ b/resources/sass/base/_typo.scss
@@ -11,3 +11,32 @@
     top: 110px;
     padding-left: 15px;
 }
+
+.txt-header-foro{
+    color: white;
+    font-size: 25px;
+    position: relative;
+    top: 80px;
+}
+
+.txt_foro{
+    color: #2299ad;
+    word-break: break-word;
+}
+
+.txt10{
+    font-size: 10px !important;
+}
+
+.txt11{
+    font-size: 11px !important;
+}
+
+.txt12{
+    font-size: 12px !important;
+}
+
+.txt18{
+    font-size: 18px;
+    font-weight: bold;
+}
