--- a/resources/sass/components/_buttons.scss
+++ b/resources/sass/components/_buttons.scss
@@ -3,6 +3,7 @@
     height: auto;
     border: 1px solid #136a78 !important;
     border-radius: 22px !important;
+    text-transform: uppercase;
 }
 
 .btn_secundary{
